jar instructions and fix typo